--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Charles' Homepage</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/main.css" type="text/css" />
+    <style>
+
+h1 {
+  font-size: 41pt;
+  color: white;
+  background-color: black;
+}
+
+body {
+  text-align: center;
+}
+
+
+
+
+
+
+
+  </style>
 </head>
 
 <body>
