--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div>
       <h1>Exercises</h1>
       <a href="" target="blank">Spreadsheet Typeface</a><br>
-      <a href="/Users/charles/Documents/CCA/3rd Year/Interactive 2/interactive2/codingfromlife-template/index.html" target="blank">Coding from Life</a><br>
+      <a href="interactive2/codingfromlife-template/index.html" target="blank">Coding from Life</a><br>
   </div>
   <div>
       <h1>Presentation</h1>
