--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h2>Project 1: CSS Typeface</h2>
       <a href="" target="blank">Sketches</a><br>
       <a href="" target="blank">Prototype: Lorem Ipsum</a><br>
-      <a href="" target="blank">Final: Lorem Ipsum</a>
+      <a href="Vanguard/Uhhhhh2.html">Final: Vanguard</a>
   </div>
 </body>
 </html>
