--- a/Vanguard/Uhhhhh2.html
+++ b/Vanguard/Uhhhhh2.html
@@ -170,7 +170,7 @@
     </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="/Users/charles/Documents/CCA/3rd Year/Interactive 2/Vanguard/script.js"></script>
+<script type="text/javascript" src="interactive2/Vanguard/script.js"></script>
 <script src="impetus.min.js"></script>
 
 <script>
