--- a/Vanguard/Uhhhhh2.html
+++ b/Vanguard/Uhhhhh2.html
@@ -13,7 +13,7 @@
   <div class="parallax">
     <div id="group1" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
- <img class="VanguardTitle" src="/Users/charles/Documents/CCA/3rd Year/Interactive 2/Vanguard/assets/Vanguard2.gif" alt="VanguardTitle" width="auto" height="auto">
+ <img class="VanguardTitle" src="assets/Vanguard2.gif" alt="VanguardTitle" width="auto" height="auto">
       </div>
     </div>
 
