--- a/index.html
+++ b/index.html
@@ -14,18 +14,179 @@
 
 <body>
   <div>
-      <h1>Exercises</h1>
+      <div class="exercise">
+        <div class="LetterBoxE">
+          <div class="LetterE"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxX">
+          <div class="LetterX"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxE">
+          <div class="LetterE"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxR">
+          <div class="LetterR"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxC">
+          <div class="LetterC"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxI">
+          <div class="LetterI"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxS">
+          <div class="LetterS"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxE">
+          <div class="LetterE"></div>
+          <div></div>
+        </div>
+      </div>
+
       <a href="" target="blank">Spreadsheet Typeface</a><br>
       <a href="codingfromlife-template/index.html">Coding from Life</a><br>
   </div>
+
   <div>
-      <h1>Presentation</h1>
+      <div class="presentation">
+        <div class="LetterBoxP">
+          <div class="LetterP"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxR">
+          <div class="LetterR"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxE">
+          <div class="LetterE"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxS">
+          <div class="LetterS"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxE">
+          <div class="LetterE"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxN">
+          <div class="LetterN"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxT">
+          <div class="LetterT"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxA">
+          <div class="LetterA"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxT">
+          <div class="LetterT"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxI">
+          <div class="LetterI"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxO">
+          <div class="LetterO"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxN">
+          <div class="LetterN"></div>
+          <div></div>
+        </div>
+      </div>
       <a href="" target="blank">Pecha Kucha: Lorem Ipsum</a>
   </div>
 
   <div>
-      <h1>Projects</h1>
-      <h2>Project 1: CSS Typeface</h2>
+      <div class="projects">
+        <div class="LetterBoxP">
+          <div class="LetterP"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxR">
+          <div class="LetterR"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxO">
+          <div class="LetterO"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxJ">
+          <div class="LetterJ"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxE">
+          <div class="LetterE"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxC">
+          <div class="LetterC"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxT">
+          <div class="LetterT"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxS">
+          <div class="LetterS"></div>
+          <div></div>
+        </div>
+      </div>
+      <div class="project1">
+        <div class="LetterBoxP">
+          <div class="LetterP"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxR">
+          <div class="LetterR"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxO">
+          <div class="LetterO"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxJ">
+          <div class="LetterJ"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxE">
+          <div class="LetterE"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxC">
+          <div class="LetterC"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxT">
+          <div class="LetterT"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxJ">
+          <div></div>
+        </div>
+        <div class="LetterBoxO">
+          <div class="LetterO"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxN">
+          <div class="LetterN"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxE">
+          <div class="LetterE"></div>
+          <div></div>
+        </div>
+      </div>
       <a href="" target="blank">Sketches</a><br>
       <a href="" target="blank">Prototype: Lorem Ipsum</a><br>
       <a href="Vanguard/Uhhhhh2.html">Final: Vanguard</a>
