--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </div>
       </div>
 
-      <a href="" target="blank">Spreadsheet Typeface</a><br>
-      <a href="codingfromlife-template/index.html">Coding from Life</a><br>
+      <a href="" target="blank">spreadsheet typeface</a><br>
+      <a href="codingfromlife-template/index.html">coding from life</a><br>
   </div>
 
   <div>
@@ -104,7 +104,7 @@
           <div></div>
         </div>
       </div>
-      <a href="" target="blank">Pecha Kucha: Lorem Ipsum</a>
+      <a href="" target="blank">pecha kucha:*******</a>
   </div>
 
   <div>
@@ -187,9 +187,9 @@
           <div></div>
         </div>
       </div>
-      <a href="" target="blank">Sketches</a><br>
-      <a href="" target="blank">Prototype: Lorem Ipsum</a><br>
-      <a href="Vanguard/Uhhhhh2.html">Final: Vanguard</a>
+      <a href="" target="blank">sketches</a><br>
+      <a href="" target="blank">prototype: *******</a><br>
+      <a href="Vanguard/Uhhhhh2.html">final: vanguard</a>
   </div>
 </body>
 </html>
