--- a/Vanguard/Uhhhhh2.html
+++ b/Vanguard/Uhhhhh2.html
@@ -9,11 +9,14 @@
 </head>
 
 <body>
-
   <div class="parallax">
     <div id="group1" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
  <img class="VanguardTitle" src="assets/Vanguard2.gif" alt="VanguardTitle" width="auto" height="auto">
+ <iframe src="Cut.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+ <audio id="player" autoplay>
+    <source src="Cut.mp3" type="audio/mp3">
+</audio>
       </div>
     </div>
 
