--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
           <div></div>
         </div>
       </div>
-      <a href="" target="blank">sketches</a><br>
-      <a href="" target="blank">prototype: *******</a><br>
+      <a href="Sketches/index.html">prototype: vanguard</a><br>
       <a href="Vanguard/Uhhhhh2.html">final: vanguard</a>
   </div>
 </body>
