--- a/index.html
+++ b/index.html
@@ -235,6 +235,60 @@
         </div>
       </div>
       <a href="Stress-Sucks/index.html">final: stress sucks</a>
+      <div class="project2">
+        <div class="LetterBoxP">
+          <div class="LetterP"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxR">
+          <div class="LetterR"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxO">
+          <div class="LetterO"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxJ">
+          <div class="LetterJ"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxE">
+          <div class="LetterE"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxC">
+          <div class="LetterC"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxT">
+          <div class="LetterT"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxJ">
+          <div></div>
+        </div>
+        <div class="LetterBoxT">
+          <div class="LetterT"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxH">
+          <div class="LetterH"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxR">
+          <div class="LetterR"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxE">
+          <div class="LetterE"></div>
+          <div></div>
+        </div>
+        <div class="LetterBoxE">
+          <div class="LetterE"></div>
+          <div></div>
+        </div>
+      </div>
+      <a href="Sol LeWitt/index.html">final: SOL LEWITT</a>
   </div>
 </body>
 </html>
