--- a/Sol LeWitt/index.html
+++ b/Sol LeWitt/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | New Unity Project (1)</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <title>Sol LeWitt</title>
+    <link rel="shortcut icon" href="TemplateData/SL.png">
     <link rel="stylesheet" href="TemplateData/style.css">
-    <script src="TemplateData/UnityProgress.js"></script>  
+    <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Sol LeWitt.json", {onProgress: UnityProgress});
@@ -16,9 +16,8 @@
     <div class="webgl-content">
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
-        <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">New Unity Project (1)</div>
+        <div class="title">Sol LeWitt: A Virtual Exhibition</div>
       </div>
     </div>
   </body>
