--- a/Sol LeWitt/index.html
+++ b/Sol LeWitt/index.html
@@ -17,7 +17,7 @@
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Sol LeWitt: A Virtual Exhibition</div>
+        <div class="title">Sol LeWitt: Virtual Exhibition</div>
       </div>
     </div>
   </body>
