--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
           <div></div>
         </div>
       </div>
+      <div class="CONTAINER">
       <div class="project1">
         <div class="LetterBoxP">
           <div class="LetterP"></div>
@@ -290,5 +291,6 @@
       </div>
       <a href="Sol LeWitt/index.html">final: SOL LEWITT</a>
   </div>
+</div>
 </body>
 </html>
